# mailmap

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: report.md  services.csv  services.json
src/mailmap/: __init__.py  __main__.py  actions.py  aggregation.py  app.py  cli.py  config.py  content.py  database.py  domains.py  evidence.py  exporters.py  fingerprints.py  imap_client.py  message_parser.py  models.py  oauth.py  scoring.py  ui.py
tests/: test_actions.py  test_aggregation.py  test_config.py  test_content.py  test_database.py  test_domains.py  test_evidence.py  test_oauth.py  test_scoring.py
